# SimpleLoggerForCXX

./: CMakeLists.txt
include/simpleloggerforcxx/log/: logger.h
